--- a/gem/CHANGELOG
+++ b/gem/CHANGELOG
@@ -1,3 +1,5 @@
+v0.3.0
+- Gem supports new required-version API
 v0.2.5
 - Add experimental support for Puma in GitLab Rails
 - Warn user if they are not using the proper Ruby version during GDK installation
